src/main/java/com/example/demo/global/error/exception/CustomException.java
package com.example.demo.global.error.exception;

import lombok.Getter;

@Getter
public class CustomException extends RuntimeException {

    private final ErrorCode errorCode;

    public CustomException(ErrorCode errorCode) {
        this.errorCode = errorCode;
    }
}
